fix/visiblity of searchbar

--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -12,10 +12,10 @@
   width: 100%;
   max-width: 548px;
   height: 56px;
+  flex: 1;   
 }
 
-
-
-
-
-
+.arrow{
+  width:32px;
+  height:32px;
+}
